Started work of camera culling

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@
 /SymbioticEngine/SBE/SBE.vcxproj.user
 /SymbioticEngine/SBE/SBE.vcxproj.filters
 /SymbioticEngine/SBE/SBE.vcxproj
+/SymbioticEngine/SBE/Release
+/SymbioticEngine/Release
+/SymbioticEngine/DemoProject/Release
